--- a/bdNetCoreAPIDataTransfer/bdNetCoreAPIDataTransfer/bdNetCoreAPIDataTransfer.csproj
+++ b/bdNetCoreAPIDataTransfer/bdNetCoreAPIDataTransfer/bdNetCoreAPIDataTransfer.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
+  </ItemGroup>
+
 </Project>
